--- a/index.html
+++ b/index.html
@@ -95,6 +95,32 @@
         color: #ccccff;
       }
     </style>
+<!-- Google Analytics -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-43026145-1', 'herokuapp.com');
+  ga('send', 'pageview');
+
+</script>
+<!-- End Google Analytics -->
+
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-43026145-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
   </head>
   <body>
   <!-- Mobile-friendly navbar adapter from example. -->
@@ -146,6 +172,20 @@
 	  <!-- Definisemo novu 'action' div koji sadrzi statistiku, poredak i share dugme -->
       <div class="span5 actions">
 <div class="span8 offset2">
+<!-- AddThis Button BEGIN -->
+<h1>OVDE SU DUGMICI</h1>
+
+<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+<a class="addthis_button_preferred_1"></a>
+<a class="addthis_button_preferred_2"></a>
+<a class="addthis_button_preferred_3"></a>
+<a class="addthis_button_preferred_4"></a>
+<a class="addthis_button_compact"></a>
+<a class="addthis_counter addthis_bubble_style"></a>
+</div>
+<script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5202058c41c5b458"></script>
+<!-- AddThis Button END -->
           <div class="statistics">
             <div class="span4">
 			
@@ -185,6 +225,7 @@
 <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
 <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
       </div>
+<a class="coinbase-button" data-code="bfd908c08693bf527bafc39a7a969dd1" data-button-style="buy_now_small" href="https://coinbase.com/checkouts/bfd908c08693bf527bafc39a7a969dd1">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
     </div>
   </div>
   
